fix footer visibility

--- a/src/app/foot-bar/foot-bar.component.css
+++ b/src/app/foot-bar/foot-bar.component.css
@@ -1,6 +1,5 @@
 #footer {
     position: relative;
-    height: 100px;
-    margin-top: -100px;
     clear: both;
+    overflow: visible;
 }
